--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .wide-image {
-    max-width: 100%; /* Set the maximum width to the width of the parent container */
-    height: auto; /* Maintain the image's aspect ratio */
+    max-width: 80%;
+    height: auto;
 }
 
 
